--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
     "react-router": "^7.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@react-router/dev": "^7.1.1",
+    "@stylistic/eslint-plugin-ts": "^2.12.1",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.0",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
   }
