--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "prettier": "3.4.2",
+    "prettier-eslint": "^16.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0",
