--- a/package.json
+++ b/package.json
@@ -4,27 +4,38 @@
   "type": "module",
   "scripts": {
     "build": "cross-env NODE_ENV=production react-router build",
+    "component:add-starter": "bun scripts/addComponent/index.ts",
     "dev": "react-router dev",
     "format:fix": "prettier --write",
     "lint": "eslint --max-warnings=0 --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
     "lint:fix": "bun run lint --fix",
     "prepare": "lefthook install",
     "start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
+    "test": "vitest",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
+    "@react-router/fs-routes": "^7.1.1",
     "@react-router/node": "^7.1.1",
     "@react-router/serve": "^7.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.469.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.1"
+    "react-router": "^7.1.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@netlify/vite-plugin-react-router": "^1.0.0",
     "@react-router/dev": "^7.1.1",
     "@stylistic/eslint-plugin-ts": "^2.12.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
@@ -35,6 +46,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.14.0",
+    "happy-dom": "^16.2.9",
     "lefthook": "^1.10.1",
     "postcss": "^8.4.49",
     "prettier": "3.4.2",
@@ -44,6 +56,7 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   }
 }
