--- a/scripts/addComponent/templates/ComponentStoryAndTestStarter/ComponentName.test.tsx.template
+++ b/scripts/addComponent/templates/ComponentStoryAndTestStarter/ComponentName.test.tsx.template
@@ -1,15 +1,16 @@
 import { render, screen } from '@testing-library/react';
+import { describe, expect, test } from 'vitest';
 
 import { ComponentName } from './ComponentName';
 
 describe('ComponentName', () => {
-  it('renders with data-testid', async () => {
+  test('renders with data-testid', async () => {
     const dataTestId = 'sample-test-id';
     render(<ComponentName dataTestId={dataTestId} />);
     await screen.findByTestId(dataTestId);
   });
 
-  it('renders snapshot', async () => {
+  test('renders snapshot', async () => {
     const { container } = render(<ComponentName />);
     expect(container).toMatchSnapshot();
   });
