chore: add color token, storybook dark mode and arg tables docgen

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "component:add-starter": "bun scripts/addComponent/index.ts",
     "dev": "react-router dev",
     "format:fix": "prettier --write",
-    "lint": "eslint --max-warnings=0 --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
+    "lint": "eslint --max-warnings=0 --cache --cache-location ./node_modules/.cache/eslint",
     "lint:fix": "bun run lint --fix",
     "prepare": "lefthook install",
     "start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
@@ -38,8 +38,6 @@
     "@react-router/dev": "^7.1.1",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/addon-themes": "^8.4.7",
     "@storybook/blocks": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
@@ -65,6 +63,7 @@
     "prettier-eslint": "^16.3.0",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "storybook": "^8.4.7",
+    "storybook-dark-mode": "^4.0.2",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0",
