chore: update github workflows

--- a/.github/workflows/ci-validate-main.yml
+++ b/.github/workflows/ci-validate-main.yml
@@ -1,8 +1,9 @@
 name: 'CI: Validate Main Branch'
 
-on: push
-branches:
-  - main
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   install-dependencies:
