--- a/scripts/addComponent/templates/ComponentStoryAndTestStarter/ComponentName.stories.tsx.template
+++ b/scripts/addComponent/templates/ComponentStoryAndTestStarter/ComponentName.stories.tsx.template
@@ -6,7 +6,7 @@ type Story = StoryObj<typeof ComponentName>;
 
 const meta: Meta = {
   component: ComponentName,
-  title: 'Core/Components/ComponentName',
+  title: 'StoryTitle',
 };
 
 export default meta;
