--- a/scripts/addComponent/templates/ComponentStoryAndTestStarter/ComponentName.test.tsx.template
+++ b/scripts/addComponent/templates/ComponentStoryAndTestStarter/ComponentName.test.tsx.template
@@ -6,7 +6,7 @@ import { ComponentName } from './ComponentName';
 describe('ComponentName', () => {
   test('renders with data-testid', async () => {
     const dataTestId = 'sample-test-id';
-    render(<ComponentName dataTestId={dataTestId} />);
+    render(<ComponentName data-testid={dataTestId} />);
     await screen.findByTestId(dataTestId);
   });
 
