--- a/lefthook.yml
+++ b/lefthook.yml
@@ -8,7 +8,7 @@ pre-commit:
   commands:
     format:
       glob: '*.{js,ts,tsx,yml}'
-      run: bun format:fix {staged_files}
+      run: bun format:fix {staged_files} && git add {staged_files}
     lint:
       glob: '*.{js,ts,tsx}'
-      run: bun lint:fix {staged_files}
+      run: bun lint:fix {staged_files} && git add {staged_files}
