--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-hookz/web": "^25.0.1",
     "@react-router/fs-routes": "^7.1.1",
     "@react-router/node": "^7.1.1",
