update styles for remaining components

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production react-router build",
     "build:storybook": "storybook build",
-    "component:add": "bun scripts/addComponent/index.ts",
     "dev": "react-router dev",
     "format:fix": "prettier --write",
     "lint": "eslint --max-warnings=0 --cache --cache-location ./node_modules/.cache/eslint",
     "lint:fix": "bun run lint --fix",
     "prepare": "lefthook install",
+    "scaffold:component": "bun scripts/scaffoldComponent/index.ts",
     "start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
     "start:storybook": "storybook dev -p 6006",
     "test": "vitest",
@@ -25,6 +25,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
