--- a/components.json
+++ b/components.json
@@ -12,9 +12,9 @@
   },
   "aliases": {
     "components": "~/modules/core/components",
-    "utils": "~/libs/shadcn/utils",
+    "utils": "~/modules/core/libs/shadcn/utils",
     "ui": "~/modules/core/components",
-    "lib": "~/libs/shadcn",
+    "lib": "~/modules/libs/shadcn",
     "hooks": "~/modules/core/hooks"
   },
   "iconLibrary": "lucide"
