--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^7.4.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
