--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production react-router build",
     "build:storybook": "storybook build",
-    "dev": "react-router dev",
+    "dev": "react-router dev | pino-pretty",
     "format:fix": "prettier --write",
     "lint": "eslint --max-warnings=0 --cache --cache-location ./node_modules/.cache/eslint",
     "lint:fix": "bun run lint --fix",
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
     "lucide-react": "^0.469.0",
+    "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
@@ -82,6 +83,7 @@
     "globals": "^15.14.0",
     "happy-dom": "^16.2.9",
     "lefthook": "^1.10.1",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.4.49",
     "prettier": "3.4.2",
     "prettier-eslint": "^16.3.0",
