--- a/.github/workflows/ci-validate-pr.yml
+++ b/.github/workflows/ci-validate-pr.yml
@@ -2,6 +2,9 @@ name: 'CI: Validate PR'
 
 on: pull_request
 
+env:
+  DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+
 jobs:
   install-dependencies:
     name: Install dependencies
@@ -10,10 +13,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/cache-dependencies
       - name: Notify job status
+        if: always()
         uses: './.github/actions/notify-job-status'
         with:
           title: 'CI: Validate PR -> Install dependencies'
           webhookUrl: ${{ env.DISCORD_WEBHOOK_URL }}
+          status: ${{ job.status }}
+          notify_when: failure_only
 
   lint:
     name: Lint
@@ -36,10 +42,13 @@ jobs:
           FILTERED_FILES="$(echo $FILES | tr " " "\n" | grep -E "(.*)\.(ts|tsx)$" || true)"
           bun run lint $FILTERED_FILES
       - name: Notify job status
+        if: always()
         uses: './.github/actions/notify-job-status'
         with:
           title: 'CI: Validate PR -> Lint'
           webhookUrl: ${{ env.DISCORD_WEBHOOK_URL }}
+          status: ${{ job.status }}
+          notify_when: failure_only
 
   test:
     name: Test
@@ -51,7 +60,10 @@ jobs:
       - name: Test
         run: bun run test:coverage
       - name: Notify job status
+        if: always()
         uses: './.github/actions/notify-job-status'
         with:
           title: 'CI: Validate PR -> Test'
           webhookUrl: ${{ env.DISCORD_WEBHOOK_URL }}
+          status: ${{ job.status }}
+          notify_when: failure_only
